force-app/main/default/objects/Director__c/Director__c.object-meta.xml
<CustomObject>
    <label>Directors/Auth.Sign. KYC</label>
    <nameField>
        <label>Legal/Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Directors/Auth.Sign. KYC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>