force-app/main/default/objects/Director__c/fields/Active_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Active_Corporate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>