force-app/main/default/objects/Director__c/fields/Apt_Unit_Number_Government__c.field-meta.xml
<CustomField>
    <fullName>Apt_Unit_Number_Government__c</fullName>
    <label>Apt/Unit Number (if applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>