force-app/main/default/objects/Director__c/fields/Are_you_PEP_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Are_you_PEP_Corporate__c</fullName>
    <label>Are you PEP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>