force-app/main/default/objects/Director__c/fields/Building_Numbe_Governmentr__c.field-meta.xml
<CustomField>
    <fullName>Building_Numbe_Governmentr__c</fullName>
    <label>Building Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>