force-app/main/default/objects/Director__c/fields/Citizenship_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Corporate__c</fullName>
    <label>Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>