force-app/main/default/objects/Director__c/fields/City_Corporate__c.field-meta.xml
<CustomField>
    <fullName>City_Corporate__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>