force-app/main/default/objects/Director__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Directors/Auth.Sign. KYC</relationshipLabel>
    <relationshipName>Directors_Auth_Sign_KYC</relationshipName>
    <type>Lookup</type>
</CustomField>