force-app/main/default/objects/Director__c/fields/Date_of_Incorporation_Corpporate__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incorporation_Corpporate__c</fullName>
    <label>Date of Incorporation</label>
    <type>Date</type>
</CustomField>