force-app/main/default/objects/Director__c/fields/Director_Auth_Sign_Government__c.field-meta.xml
<CustomField>
    <fullName>Director_Auth_Sign_Government__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director/Auth.Sign. of</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Customer__c</field>
            <operation>equals</operation>
            <valueField>Corporate_KYC__c.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Corporate_KYC__c</referenceTo>
    <relationshipLabel>Directors/Auth.Sign. KYC (Director/Auth.Sign. of)</relationshipLabel>
    <relationshipName>Directors_Auth_Sign_KYC1</relationshipName>
    <type>Lookup</type>
</CustomField>