force-app/main/default/objects/Director__c/fields/DOT_Government__c.field-meta.xml
<CustomField>
    <fullName>DOT_Government__c</fullName>
    <label>DOT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>