force-app/main/default/objects/Director__c/fields/End_Date_Corporate__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Corporate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>