force-app/main/default/objects/Director__c/fields/Expiry_Date_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_Corporate__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>