force-app/main/default/objects/Director__c/fields/Full_Name_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Corporate__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>