force-app/main/default/objects/Director__c/fields/Registration_Number_Government__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number_Government__c</fullName>
    <label>Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>