force-app/main/default/objects/Director__c/fields/Residence_Address_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Residence_Address_Corporate__c</fullName>
    <label>Residence Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>