force-app/main/default/objects/Director__c/fields/State_Province_Corporate__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Corporate__c</fullName>
    <label>State/Province (if applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>